# opencv_blog_olympics_examples

./: README.md
objectbase/: ObjectBase.xml
src/: CMakeLists.txt  main.cpp
